--- a/inventario/src/main/resources/static/pages/product_details.html
+++ b/inventario/src/main/resources/static/pages/product_details.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oasis</title>
-    <link rel="stylesheet" href="../style/products.css">
+    <title>Oasis | add product</title>
+    <link rel="stylesheet" href="../style/product_details.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
@@ -24,10 +24,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="d-flex justify-content-center align-items-center navbar-nav ms-auto me-5">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Productos</a>
+                            <a class="nav-link" aria-current="page" href="./products.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./add_product.html">Añadir Producto</a>
+                            <a class="nav-link active" href="#">Añadir Producto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><img src="../assets/usuario.png" alt="user_picture"
@@ -39,50 +39,45 @@
         </nav>
     </header>
     <main id="app">
-        <h1 class="text-center pt-5 pb-5">Inventario de productos</h1>
-        <div class="d-flex justify-content-center align-items-center search_bar">
-            <label for="search" class="pe-3"><img src="../assets/buscar.png" alt="lupa" class="search"></label>
-            <input type="text" id="search" placeholder="Escribe por nombre, descripción o tipo" v-model="text_input"
-                @input="type_text_filter">
-        </div>
-        <div class="pt-5 d-flex justify-content-between align-items-start flex-wrap">
-            <div class="col-12 col-lg-3 mb-5 mb-lg-0 input_type">
-                <div class="d-flex flex-column align-items-start">
-                    <label for="Type" class="text-start pb-2">Tipo</label>
-                    <select class="form-select" aria-label="Default select example" v-model="selected_type"
-                        @change="type_text_filter">
-                        <option selected value="">Todos</option>
-                        <template v-for="types of data_type">
-                            <option :value="types">{{types}}</option>
-                        </template>
-                    </select>
-                </div>
+        <div class="info_details container-fluid">
+            <img :src="data.image" :alt="data.name">
+            <div class="ps-0 ps-sm-3 pt-2 pt-sm-0">
+                <h6>{{data.name}}</h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ullam labore omnis qui. Iure eligendi temporibus iusto, explicabo ullam amet similique architecto tempora. Sed ipsam iure architecto earum asperiores voluptatum.</p>
+                <span class="badge text-bg-light">{{data.type}}</span>
             </div>
-            <div class="col-12 col-lg-8 cards_product d-flex justify-content-evenly align-items-start flex-wrap">
-                <template v-if="data_filter.length > 0" v-for="product of data_filter">
-                    <a :href="'./product_details.html?id=' + product.id">
-                        <div class="card mb-4">
-                            <img :src="product.image" class="card-img-top" :alt="product.image">
-                            <div class="card-body">
-                                <h6 class="card-title">{{product.name}}</h6>
-                                <small>{{product.type}}</small>
-                                <p class="card-text mt-3 mb-1">In Stock</p>
-                                <template v-if="product.quantity > 0">
-                                    <span class="fw-bold text-success">Yes</span>
-                                </template>
-                                <template v-else>
-                                    <span class="fw-bold text-danger">No</span>
-                                </template>
-                            </div>
-                        </div>
-                    </a>
+        </div>
+        <div class="mt-3">
+            <div>
+                <p class="tittle mb-0">ID producto</p>
+                <p>{{data.id}}</p>
+            </div>
+            <div>
+                <p class="tittle mb-0">Stock</p>
+                <template v-if="data.quantity > 0">
+                    <p>Si</p>
                 </template>
                 <template v-else>
-                    <div class="pt-5 pb-5">
-                        <h2>No hay productos encontrados</h2>
-                    </div>
-                </template>
+                    <p>No</p>
+                </template>               
             </div>
+            <div>
+                <p class="tittle mb-0">Precio</p>
+                <p>{{data.price.toFixed(0).replace(/\B(?=(\d{3})+(?!\d))/g, ",")}} $</p>
+            </div>
+            <div>
+                <p class="tittle mb-0">Costo de manufactura</p>
+                <p>{{data.price.toFixed(0).replace(/\B(?=(\d{3})+(?!\d))/g, ",")}} $</p>
+            </div>
+            <div>
+                <p class="tittle mb-0">Unidades vendidas</p>
+                <p>3</p>
+            </div>
+            <div>
+                <p class="tittle mb-0">Unidades en inventario</p>
+                <p>{{data.quantity}}</p>
+            </div>
+            <a href="./products.html" type="button" class="btn btn-light">Devuelta a productos</a>           
         </div>
     </main>
     <footer class="bg-body-tertiary p-3">
@@ -126,7 +121,7 @@
         crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/products.js"></script>
+    <script src="../js/product_details.js"></script>
 </body>
 
 </html>
