--- a/inventario/src/main/resources/static/pages/add_product.html
+++ b/inventario/src/main/resources/static/pages/add_product.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oasis | add product</title>
+    <link rel="shortcut icon" href="../assets/logo-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/add_product.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -42,7 +43,7 @@
         <h1 class="text-center pt-5 pb-5">Add a new product</h1>
         <div class="d-flex justify-content-center align-items-center pb-5">
             <div class="p-2 form_create">
-                <form @submit.prevent="add_product">
+                <form @submit.prevent="add_product" enctype="multipart/form-data">
                     <div class="mb-3 div_form">
                         <label for="name" class="form-label">Nombre del Producto*</label>
                         <input type="text" class="form-control" id="name" placeholder="Nombre del producto" v-model="name" required>
@@ -51,9 +52,13 @@
                         <label for="descripcion" class="form-label">Descripción del producto</label>
                         <textarea class="form-control" id="descripcion" rows="3" v-model="description"></textarea>
                     </div>
-                    <div class="mb-3 div_form">
-                        <label for="image" class="form-label">Imagen del producto</label>
-                        <input class="form-control" type="file" id="image" v-model="image">
+                    <div class="mb-3 d-flex flex-column align-items-center justify-content-center">
+                        <img :src="image" alt="" class="productImage mb-3">
+                        <div class="div_form">
+                            <label for="image" class="form-label">Imagen del producto</label>
+                            <input class="form-control" type="file" id="image" accept="image/" v-model="image" @change="changePicture">
+                        </div>
+                        
                     </div>
                     <div class="mb-3 div_form">
                         <label for="Type" class="text-start pb-2">Tipo*</label>
