Añado el back para poder modificar productos.

--- a/inventario/src/main/resources/static/pages/add_product.html
+++ b/inventario/src/main/resources/static/pages/add_product.html
@@ -83,11 +83,12 @@
         </div>
     </main>
     <footer class="bg-body-tertiary p-3">
-        <div class="d-flex justify-content-evenly flex-wrap">
+        <div class="d-flex justify-content-evenly align-items-center flex-wrap">
             <div>
                 <h3>Contact</h3>
                 <p>Phone: +1 123-456-7890</p>
-                <p>Eail: mindhub@gmail.com</p>
+                <p>Email: mindhub@gmail.com</p>
+                <p>Address: 123 Principal Street</p>
                 <div class="d-flex">
                     <a class="link-opacity-50-hover link-success"
                         href="https://www.linkedin.com/in/santiago-aristizabal-restrepo-a17015221/">
@@ -97,11 +98,9 @@
                     <a href="https://github.com/JsantiAristi" target="_blank"><img src="../assets/github.png"
                             alt="gitHUb" class="socialIcon"></a>
                 </div>
+                
             </div>
             <div class="pt-3 pt-sm-0">
-                <h3>Address</h3>
-                <p>123 Principal Street</p>
-                <p>Medellín, Colombia</p>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31230.05536071407!2d-122.43129716205499!3d37.77397288185648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zN8KwMTAnMzguNiJOIDEyMjPCsDE1JzI3LjMiRQ!5e0!3m2!1sen!2sus!4v1557222375536!5m2!1sen!2sus"
                     width="200" height="150" frameborder="0" class="rounded" allowfullscreen></iframe>
