--- a/inventario/src/main/resources/static/pages/change_product.html
+++ b/inventario/src/main/resources/static/pages/change_product.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oasis</title>
-    <link rel="stylesheet" href="../style/products.css">
+    <title>Oasis | add product</title>
+    <link rel="shortcut icon" href="../assets/logo-removebg-preview.png" type="image/x-icon">
+    <link rel="stylesheet" href="../style/change_product.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
@@ -24,10 +25,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="d-flex justify-content-center align-items-center navbar-nav ms-auto me-5">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Productos</a>
+                            <a class="nav-link" aria-current="page" href="./products.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./add_product.html">Añadir Producto</a>
+                            <a class="nav-link active" href="#">Añadir Producto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><img src="../assets/usuario.png" alt="user_picture"
@@ -39,51 +40,38 @@
         </nav>
     </header>
     <main id="app">
-        <h1 class="text-center pt-5 pb-5">Inventario de productos</h1>
+        <h1 class="text-center pt-5 pb-5">Editar producto</h1>
         <div class="d-flex justify-content-center align-items-center search_bar">
             <label for="search" class="pe-3"><img src="../assets/buscar.png" alt="lupa" class="search"></label>
             <input type="text" id="search" placeholder="Escribe por nombre, descripción o tipo" v-model="text_input"
                 @input="type_text_filter">
         </div>
-        <div class="pt-5 d-flex justify-content-between align-items-start flex-wrap">
-            <div class="col-12 col-lg-3 mb-5 mb-lg-0 input_type">
-                <div class="d-flex flex-column align-items-start">
-                    <label for="Type" class="text-start pb-2">Tipo</label>
-                    <select class="form-select" aria-label="Default select example" v-model="selected_type"
-                        @change="type_text_filter">
-                        <option selected value="">Todos</option>
-                        <template v-for="types of data_type">
-                            <option :value="types">{{types}}</option>
-                        </template>
-                    </select>
-                </div>
-            </div>
-            <div class="col-12 col-lg-8 cards_product d-flex justify-content-evenly align-items-start flex-wrap">
-                <template v-if="data_filter.length > 0" v-for="product of data_filter">
-                    <a :href="'./product_details.html?id=' + product.id">
-                        <div class="card mb-4">
-                            <img :src="product.image" class="card-img-top" :alt="product.image">
-                            <div class="card-body">
-                                <h6 class="card-title">{{product.name}}</h6>
-                                <small>{{product.type}}</small>
-                                <p class="card-text mt-3 mb-1">In Stock</p>
-                                <template v-if="product.quantity > 0">
-                                    <span class="fw-bold text-success">Yes</span>
-                                </template>
-                                <template v-else>
-                                    <span class="fw-bold text-danger">No</span>
-                                </template>
-                            </div>
-                        </div>
-                    </a>
-                </template>
-                <template v-else>
-                    <div class="pt-5 pb-5">
-                        <h2>No hay productos encontrados</h2>
-                    </div>
-                </template>
-            </div>
-        </div>
+        <div class="table-responsive">
+            <table class="table mt-5 mb-0 table-striped table-hover align-middle">
+                <thead>
+                    <tr>
+                        <th scope="col">Foto</th>
+                        <th scope="col">Nombre</th>
+                        <th scope="col">Descripción del producto</th>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Precio</th>
+                        <th scope="col">Cantidad</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <template v-for="product of data">
+                        <tr>
+                            <td><img :src="product.image" :alt="product.name" class="image_product rounded"></td>
+                            <td>{{product.name}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"> </td>
+                            <td>{{product.description}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"></td>
+                            <td>{{product.type}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"></td>
+                            <td>{{product.price}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"></td>
+                            <td>{{product.quantity}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"></td>
+                        </tr>
+                    </template>  
+                </tbody>
+            </table>
+        </div>   
     </main>
     <footer class="bg-body-tertiary p-3">
         <div class="d-flex justify-content-evenly align-items-center flex-wrap">
@@ -101,7 +89,7 @@
                     <a href="https://github.com/JsantiAristi" target="_blank"><img src="../assets/github.png"
                             alt="gitHUb" class="socialIcon"></a>
                 </div>
-                
+
             </div>
             <div class="pt-3 pt-sm-0">
                 <iframe
@@ -123,9 +111,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="../js/products.js"></script>
+    <script src="../js/change_product.js"></script>
 </body>
 
 </html>
