--- a/inventario/src/main/resources/static/pages/add_product.html
+++ b/inventario/src/main/resources/static/pages/add_product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oasis | add product</title>
+    <title>Oasis | Añadir Producto</title>
     <link rel="shortcut icon" href="../assets/logo-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/add_product.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -40,7 +40,7 @@
         </nav>
     </header>
     <main id="app">
-        <h1 class="text-center pt-5 pb-5">Add a new product</h1>
+        <h1 class="text-center pt-5 pb-5">Añade un nuevo producto</h1>
         <div class="d-flex justify-content-center align-items-center pb-5">
             <div class="p-2 form_create">
                 <form @submit.prevent="add_product" enctype="multipart/form-data">
@@ -120,6 +120,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="../js/add_product.js"></script>
