--- a/inventario/src/main/resources/static/pages/change_product.html
+++ b/inventario/src/main/resources/static/pages/change_product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oasis | add product</title>
+    <title>Oasis | Editar Productos</title>
     <link rel="shortcut icon" href="../assets/logo-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="../style/change_product.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -28,7 +28,7 @@
                             <a class="nav-link" aria-current="page" href="./products.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Añadir Producto</a>
+                            <a class="nav-link" href="./add_product.html">Añadir Producto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><img src="../assets/usuario.png" alt="user_picture"
@@ -62,11 +62,11 @@
                     <template v-for="product of data">
                         <tr>
                             <td><img :src="product.image" :alt="product.name" class="image_product rounded"></td>
-                            <td>{{product.name}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"> </td>
-                            <td>{{product.description}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"></td>
-                            <td>{{product.type}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"></td>
-                            <td>{{product.price}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"></td>
-                            <td>{{product.quantity}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData"></td>
+                            <td>{{product.name}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData(product.id,product.name)"> </td>
+                            <td>{{product.description}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData(product.id,product.description)"></td>
+                            <td>{{product.type}}</td>
+                            <td>{{product.price.toLocaleString("en-US", { style: 'currency', currency: 'USD' })}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData(product.id,product.price)"></td>
+                            <td>{{product.quantity}} <img src="../assets/editar.png" alt="edit" class="edit_product ms-1" @click="changeData(product.id,product.quantity)"></td>
                         </tr>
                     </template>  
                 </tbody>
